test/Tests/VertexInput/ComponentOutOfRange.golden

test\Tests\VertexInput\ComponentOutOfRange.hs:38:10: error:
    * Cannot position scalar of type Float
       at Location 0, Component 4.
    * In the expression:
        shader
          do ~(Vec4 x y z _) <- get @"in1"
             w <- get @"in2"
             put @"out" (Vec4 x y z w)
      In an equation for `vertex':
          vertex
            = shader
                do ~(Vec4 x y z _) <- get @"in1"
                   w <- get @"in2"
                   put @"out" (Vec4 x y z w)
   |
38 | vertex = shader do
   |          ^^^^^^^^^^...
